# Dynamics-and-Control

./: pyproject.toml
1_Dynamics/5_Complex_system_dynamics/: Block diagram simplification.ipynb
1_Dynamics/7_System_identification/: Dynamic model parameter estimation.ipynb
1_Dynamics/9_Sampled_systems/: The z domain and continuous systems.ipynb
tbcontrol/: blocksim.py  responses.py  symbolic.py
