[tool.poetry]
name = "dynamics-and-control"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tbcontrol"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
sympy = ">=1.4"
scipy = ">=1.11.2"
control = ">=0.9.4"
nbformat = ">=5.9.2"
nbconvert = ">=7.8.0"
ipython = ">=8.15.0"
ipykernel = ">=6.25.2"
pytest-xdist = ">=3.3.1"
xlrd = ">=2.0.1"
patsy = ">=0.5.3"
scikit-learn = ">=1.3.0"
jupyter = ">=1.0.0"
pandas = ">=2.1.0"
tqdm = ">=4.66.1"
slycot = ">=0.6.0"
tbcontrol = ">=0.2.1"


[tool.poetry.group.test.dependencies]
pytest = ">=7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
